--- a/style.css
+++ b/style.css
@@ -35,3 +35,19 @@
   width: 160px;
   background-color: #000000;
 }
+
+.cuadrado4 {
+  height: 40px;
+  width: 160px;
+  background-color: #f1f8fa;
+}
+.cuadrado5 {
+  height: 40px;
+  width: 160px;
+  background-color: #808080;
+}
+.cuadrado6 {
+  height: 40px;
+  width: 160px;
+  background-color: #000000;
+}
